--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Not like real whatsapp This is a failed project but its good that i have tried.<a class="nav-link py-3 px-0 px-lg-3 rounded" href="Watsapp/test1-main/index.html"">Whatsapp(failed)</a></p>
+                                    <p class="mb-4">Not like real whatsapp This is a failed project but its good that i have tried.<a class="nav-link py-3 px-0 px-lg-3 rounded" href="Watsapp/index.html"">Whatsapp(failed)</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
                                     </button>
                                         <!-- Portfolio Modal - 5-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">INSTAGRAM 2 </h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"> </h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
